--- a/src/main/webapp/WEB-INF/templates/front/list/list.html
+++ b/src/main/webapp/WEB-INF/templates/front/list/list.html
@@ -44,10 +44,10 @@
         <div class="divTableHeading">
             <div class="divTableRow">
                 <div th:text="#{연번}" class="divTableHead">head1</div>
-                <div th:text="#{관측소 명}" class="divTableHead">head2</div>
-                <div th:text="#{관측소 유형}" class="divTableHead">head3</div>
-                <div th:text="#{관측소 코드}" class="divTableHead">head4</div>
-                <div th:text="#{관측 정보}" class="divTableHead">head4</div>
+                <div th:text="#{관측소명}" class="divTableHead">head2</div>
+                <div th:text="#{관측소_유형}" class="divTableHead">head3</div>
+                <div th:text="#{관측소코드}" class="divTableHead">head4</div>
+                <div th:text="#{관측_정보}" class="divTableHead">head4</div>
                 <div th:text="#{수정}" class="divTableHead">head4</div>
                 <div th:text="#{삭제}" class="divTableHead">head4</div>
                 <div th:text="#{환경설정}" class="divTableHead">head4</div>
